--- a/AmarDaan/templates/base.html
+++ b/AmarDaan/templates/base.html
@@ -51,7 +51,7 @@
       </nav>
       {% block content %} {% endblock %}
       <footer>
-        <p>All rights reserved <i class="fa fa-heart"></i> by <a target="_blank" href="https://florin-pop.com">AmarDaan</a></p>
+        <p>All rights reserved <i class="fa fa-heart"></i> by <a target="_blank" href="https://www.fb.com/mkmamun111">AmarDaan</a></p>
       </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
