--- a/amardaan/static/css/campaign_details.css
+++ b/amardaan/static/css/campaign_details.css
@@ -125,8 +125,121 @@
 *{
     font-family: 'Plus Jakarta Sans', sans-serif;
 }
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:600,400,300);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
+
+/* Colors */
+
+.donation--container {
+ width: 100%;
+}
+
+.donation--user {
+  margin-bottom: 50px;
+}
+
+.donation--title {
+  color: #525961;
+  font-weight: 600;
+}
+
+.donation--goal {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  font-size: 12px;
+  text-align: center;
+  padding: 10px;
+  color: #fff;
+  position: relative;
+  margin: 15px 0px 15px 0px ;
+  background-color: #1b38f8;
+  border-radius: 10px;
+}
+
+.donation--rounded {
+  height: 100%;
+  border-radius: 10px 0 0 10px;
+  overflow: hidden;
+  transform: translateZ(0);
+}
+
+.donation--bar {
+  position: relative;
+  width: 100%;
+  height: 25px;
+  background-color: #e7edf4;
+  border-radius: 10px;
+}
+
+.donation--progress {
+  position: relative;
+  max-width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background-color: #47cf73;
+  transition: width 2s linear;
+}
+
+.donation--number {
+  transition: left 2s linear;
+  position: absolute;
+  top: -18px;
+  transform: translate(-50%, -100%);
+  padding: 4px 10px;
+  color: #47cf73;
+  font-size: 13px;
+  font-weight: 300;
+  background-color: #525961;
+  border-radius: 3px;
+}
+
+.donation--number:after {
+  content: "";
+  position: absolute;
+  top: 26px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-top: 5px solid #525961;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+}
+
+.donation--status {
+  margin-top: 20px;
+  text-align: center;
+  display: block;
+}
+
+.form--container {
+  display: block;
+  text-align: center;
+  margin: 30px 0;
+}
+
+.button {
+  background-color: #fff;
+  color: #47cf73;
+  font-weight: 400;
+  text-decoration: none;
+  border: 2px solid #47cf73;
+  padding: 10px 25px;
+  transition: all .15s ease-in-out;
+}
+
+.button:hover {
+  background-color: #47cf73;
+  color: #fff;
+}
+
+.input {
+  border: 2px solid #525961;
+  padding: 10px;
+  margin: 30px 0;
+}
+
 .main-container{
-    height: 80vh;
+    height: 100vh;
     margin: 30px;
     display: flex;
     padding: 30px;
@@ -148,22 +261,95 @@
     padding: 20px;
     height: 100%;
     width: 100%;
-    background-color: rgb(236, 236, 230);
+    position: relative;
+    gap: 40px;
+    
 }
 .left-content{
     display: flex;
-    width: 60%;
+    width: 70%;
     height: 100%;
-    background-color: rgb(232, 232, 232);
-    border-radius: 40px;
+    box-shadow: 0px 0px 10px #ffffff,
+    0px 0px 5px #ceced1;
+    border-radius: 10px;
+    position: relative;
 }
-.right-content{
-    display: flex;
-    width: 60%;
-    height: 100%;
-    justify-content: flex-end;
-    background-color: rgb(232, 232, 232);
-    border-radius: 40px;
-    flex-direction: row;
-    row-gap: 30px;
+
+.left-container{
+  display: flex;
+  padding: 30px;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  gap: 50px;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+}
+.photo-container{
+  width: 600px;
+  height: 90%;
+  justify-content: flex-start;
+  position: relative;
+  text-align: justify;
+}
+.btns{
+  border: transparent;
+  background-color: #1b38f8;
+  border-radius: 10px;    
+  color: white;
+  margin: 10px;
+}
+#text {
+  max-height: 600px;
+  overflow-y: scroll;
+  padding: 10px;
+  scrollbar-width: thin;
+  scrollbar-color: #1b38f8 #1b38f8;
+  border-radius: 10px;
+}
+
+#text::-webkit-scrollbar {
+  width: 8px;
+}
+
+#text::-webkit-scrollbar-thumb {
+  background-color: #1b38f8;
+  border-radius: 10px;
+
+}
+
+#text::-webkit-scrollbar-track {
+  background-color: #d2d3d5;
+  border-radius: 10px;
+
+}
+
+.story {
+  font-size: 18px;
+  line-height: 1.6;
+}
+
+.call-to-action {
+  text-align: center;
+  margin-top: 20px;
+}
+.photo-container img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.right-content {
+  display: flex;
+  flex: 1;
+  height: 100%;
+  box-shadow: 0px 0px 10px #ffffff,
+  0px 0px 5px #ceced1;
+  border-radius: 10px;
+  row-gap: 30px;
+  align-items: center;
+  padding: 30px;
+  box-sizing: border-box;
 }
