--- a/amardaan/templates/statistics.html
+++ b/amardaan/templates/statistics.html
@@ -143,7 +143,7 @@
                         <path d="M10.5418 19.25C15.3513 19.25 19.2502 15.3512 19.2502 10.5417C19.2502 5.73223 15.3513 1.83337 10.5418 1.83337C5.73235 1.83337 1.8335 5.73223 1.8335 10.5417C1.8335 15.3512 5.73235 19.25 10.5418 19.25Z" stroke="#596780" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M20.1668 20.1667L18.3335 18.3334" stroke="#596780" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>         
-                    <input type="text" class="search__input" placeholder="Search something here">           
+                    <input type="text" class="search__input" placeholder="Search campaign here">           
                 </div>
                 <div class="user-nav">
                     <button class="notification">
