--- a/AmarDaan/templates/nav_bar.html
+++ b/AmarDaan/templates/nav_bar.html
@@ -18,6 +18,9 @@
             <a class="nav-link" href="#">Dashboard</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{url_for('views.faq')}}">FAQ</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="./user_form.html">Login/Signup</a>
           </li>
           <li class="nav-item">
