Completed the faq page!

--- a/amardaan/templates/faq.html
+++ b/amardaan/templates/faq.html
@@ -2,6 +2,8 @@
 
 {% block link %}
 <link rel="stylesheet" href="../static/css/faq.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+
 {% endblock %}
 
 {% block body %}
@@ -26,14 +28,15 @@
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                             data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                            What is Lorem Ipsum?
+                                            What is AmarDaan?
                                         </button>
                                     </h5>
                                 </div>
 
                                 <div id="collapseOne" class="collapse" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.
+                                        We’re a personal crowdfunding website where you can raise money for anything that matters to you. From personal causes and projects to events and more.
+                                        <br>As one of the first personal crowdfunding websites, our experience, support, and features will help ensure you raise the most money possible.
                                     </div>
                                 </div>
                             </div>
@@ -43,13 +46,14 @@
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                             data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                            Where does it come from?
+                                            What Makes AmarDaan Different?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="collapseTwo" class="collapse" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. 
+                                        We’re glad you asked! With the increasing number of crowdfunding sites out there, you need to know you’re dealing with a reputable and established website.
+                                        AmarDaan is proud to be one of the first major personal crowdfunding sites, having launched in 2011.<br> Since then, we’ve helped people from all over the world raise millions online. Our unique platform is continually engineered to ensure our campaign owners raise the most money possible.
                                     </div>
                                 </div>
                             </div>
@@ -59,13 +63,14 @@
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                             data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                           Why do we use it?
+                                           How Can I contact you?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="collapseThree" class="collapse" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. 
+                                        Simply send us an email and we’ll get back to you as soon as possible – that’s normally under an hour.
+                                        <br>You can also find us on Facebook and follow us on Twitter to get our latest news and updates.
                                     </div>
                                 </div>
                             </div>
@@ -75,13 +80,14 @@
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                             data-target="#collapse4" aria-expanded="false" aria-controls="collapseThree">
-                                            Where can I get some?
+                                            What if I don’t reach my fundraising target?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="collapse4" class="collapse" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
+                                        We’re a ‘keep-it-all’ personal crowdfunding site meaning that even if you don’t reach your fundraising goal, you still keep all of the funds raised (minus our industry low fees). Some sites return money to donors if you don’t reach your goal under the assumption that you won’t be able to complete your plans with only some of the money.
+                                        In addition, you have access to the funds raised throughout the campaign as opposed to just when your campaign ends (some clearing periods may apply).
                                     </div>
                                 </div>
                             </div>
@@ -93,13 +99,22 @@
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                             data-target="#collapse5" aria-expanded="false" aria-controls="collapseOne">
-                                            What is Lorem Ipsum?
+                                            What information should I include on my fundraising page?
                                         </button>
                                     </h5>
                                 </div>
 
                                 <div id="collapse5" class="collapse" data-parent="#accordionExample">
                                     <div class="card-body">
+                                        When you are writing your appeal, you should explain:
+                                        <ul>
+                                            <li><i class="fa-solid fa-check"></i>  What it is you are trying to do</li>
+                                            <li><i class="fa-solid fa-check"></i>  How you will do it</li>
+                                            <li><i class="fa-solid fa-check"></i>  How the funds will be used</li>
+                                            <li><i class="fa-solid fa-check"></i>  Information about you or if applicable, the people in your team</li>
+                                        </ul>
+                                        The more information you share, the more you will earn your backers’ trust.
+                                        Think of what it would take for you to fund a campaign. Then go ahead and include all that information.
                                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.
                                     </div>
                                 </div>
@@ -110,13 +125,15 @@
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                             data-target="#collapse6" aria-expanded="false" aria-controls="collapseTwo">
-                                            Where does it come from?
+                                            What fees do you charge?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="collapse6" class="collapse" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. 
+                                        It’s completely free to start your fundraiser!<br><br>
+                                        We charge a competitive 6.9% fee on funds raised (2.9% of which is a payment processing fee*) – making our fees lower than all of our major competitors. There is also a small 0.30c handling  fee that is applied to each donation made. All fees are automatically deducted when you receive a donation – you don’t have to do anything and you won’t get any bills from us.<br><br>
+                                        We know that the features and personal support we provide will help attract extra donations that will more than cover this fee.
                                     </div>
                                 </div>
                             </div>
@@ -126,13 +143,13 @@
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                             data-target="#collapse7" aria-expanded="false" aria-controls="collapseThree">
-                                            Why do we use it?
+                                            When do I receive the funds raised?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="collapse7" class="collapse" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                                        Donations received via AmarDaan Card Payments can be withdrawn from your campaign’s eWallet and deposited into your bank account once a 7 day clearing period for each donation has lapsed.<br> It should be noted that you will need to complete a standard verification process before withdrawing those funds.
                                     </div>
                                 </div>
                             </div>
@@ -141,14 +158,13 @@
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                             data-target="#collapse8" aria-expanded="false" aria-controls="collapseThree">
-                                            Where can I get some?
+                                            Are there any fees associated with donating?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="collapse8" class="collapse" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        
-                                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
+                                        You aren’t charged any fees for backing a fundraiser.
                                     </div>
                                 </div>
                             </div>
@@ -163,4 +179,7 @@
         </div>
     </div>
 </section>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 {% endblock %}
