--- a/amardaan/templates/faq.html
+++ b/amardaan/templates/faq.html
@@ -6,7 +6,7 @@
 
 {% endblock %}
 
-{% block body %}
+{% block content %}
 <section class="faq">
     <div class="container">
         <div class="row justify-content-center">
